# yandex_watcher

./: .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml  yc_module.py
.vim/: coc-settings.json
environment/: yc.env.example
